--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -84,15 +84,16 @@ svg {
   }
 
   &_description {
-    margin-bottom: 20px;
     font-size: 16px;
     line-height: 25px;
     color: $color-desc;
+    padding-bottom: 20px;
 
     @include media-breakpoint-up($bp-md) {
       font-size: 19px;
       line-height: 28px;
-      margin-bottom: 30px;
+      width: 75%;
+      margin: auto;
     }
   }
 }
